--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="songhyeonlee.teamplayboard">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,26 +12,44 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".Create_Project" />
+        <activity android:name=".Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".Create_Project" />
-        <activity android:name=".Login" />
+            </activity>
         <activity android:name=".Find_IdPw" />
         <activity android:name=".AlarmBox" />
         <activity android:name=".Join" />
         <activity android:name=".Kanban1" />
         <activity android:name=".Create_Kanban1" />
         <activity android:name=".Kanban2" />
-        <activity android:name=".kanban3" />
         <activity android:name=".Kanban3" />
         <activity android:name=".Details" />
         <activity android:name=".Edit_Details" />
         <activity android:name=".Change_PW" />
-        <activity android:name=".Find_PW"></activity>
+        <activity android:name=".Find_PW" />
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".MyFirebaseInstanceIDService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
